# tmux-sidecar

./: README.md  mcp_config.json  pyproject.toml
